refactor : DTO 적용