@@ -3,6 +3,7 @@ package domain.game;
 import domain.player.Dealer;
 import domain.player.Participant;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -10,7 +11,7 @@ import static java.util.stream.Collectors.*;
 
 public final class GameResult {
 
-    private static final List<Participant> BLANK_LIST = List.of();
+    private static final List<Participant> BLANK_LIST = Collections.emptyList();
 
     private final Map<ResultType, List<Participant>> results;
 
@@ -23,18 +24,6 @@ public final class GameResult {
                 .collect(groupingBy(participant -> ResultType.of(dealer, participant)));
 
         return new GameResult(result);
-    }
-
-    public int countWinners() {
-        return getWinners().size();
-    }
-
-    public int countLosers() {
-        return getLosers().size();
-    }
-
-    public int countDrawParticipants() {
-        return getDrawParticipants().size();
     }
 
     public List<Participant> getWinners() {
